<?xml version="1.0"?>
<package>
  <name>tue_control</name>
  <version>0.0.0</version>
  <description>Joint and base controllers</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>scl_filters</build_depend>
  <run_depend>scl_filters</run_depend>

  <build_depend>tue_config</build_depend>
  <run_depend>tue_config</run_depend>

</package>
